# alphalens-cn

./: .gitignore  APPLICATION_DRAFT.md  CONTRIBUTING.md  LICENSE  PROJECT_POSITIONING_CN.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
reports/: 2026-03-13-real.md  2026-03-13-top3.md  2026-03-13.md  README.md
src/alphalens_cn/: akshare_provider.py  cli.py  exporters.py  market_tools.py  mock_data.py  models.py  providers.py  report.py  scoring.py
tests/: test_cli.py  test_provider.py  test_report.py  test_scoring.py
