[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphalens-cn"
version = "0.1.0"
description = "Open-source A-share market review and analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Alchemyoo"}
]
dependencies = []

[project.scripts]
alphalens-cn = "alphalens_cn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
